--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck.component.html
@@ -68,7 +68,7 @@
                                 </span>
                             </div>
                             <div>
-                                <span (click)="openDialogPopUp(element)">
+                                <span (click)="openDialogPopUp(factcheck)">
                                     <fa-icon [icon]="'times'">
                                     </fa-icon>
                                 </span>
