New loader added

--- a/src/main/webapp/content/css/loading.css
+++ b/src/main/webapp/content/css/loading.css
@@ -1,90 +1,3 @@
-@keyframes lds-pacman-1 {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    50% {
-        -webkit-transform: rotate(-45deg);
-        transform: rotate(-45deg);
-    }
-    100% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-}
-@-webkit-keyframes lds-pacman-1 {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    50% {
-        -webkit-transform: rotate(-45deg);
-        transform: rotate(-45deg);
-    }
-    100% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-}
-@keyframes lds-pacman-2 {
-    0% {
-        -webkit-transform: rotate(180deg);
-        transform: rotate(180deg);
-    }
-    50% {
-        -webkit-transform: rotate(225deg);
-        transform: rotate(225deg);
-    }
-    100% {
-        -webkit-transform: rotate(180deg);
-        transform: rotate(180deg);
-    }
-}
-@-webkit-keyframes lds-pacman-2 {
-    0% {
-        -webkit-transform: rotate(180deg);
-        transform: rotate(180deg);
-    }
-    50% {
-        -webkit-transform: rotate(225deg);
-        transform: rotate(225deg);
-    }
-    100% {
-        -webkit-transform: rotate(180deg);
-        transform: rotate(180deg);
-    }
-}
-@keyframes lds-pacman-3 {
-    0% {
-        -webkit-transform: translate(190px, 0);
-        transform: translate(190px, 0);
-        opacity: 0;
-    }
-    20% {
-        opacity: 1;
-    }
-    100% {
-        -webkit-transform: translate(70px, 0);
-        transform: translate(70px, 0);
-        opacity: 1;
-    }
-}
-@-webkit-keyframes lds-pacman-3 {
-    0% {
-        -webkit-transform: translate(190px, 0);
-        transform: translate(190px, 0);
-        opacity: 0;
-    }
-    20% {
-        opacity: 1;
-    }
-    100% {
-        -webkit-transform: translate(70px, 0);
-        transform: translate(70px, 0);
-        opacity: 1;
-    }
-}
-
 .app-loading {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     position: relative;
@@ -92,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    top: 10em;
+    height: 100vh;
 }
 .app-loading p {
     display: block;
@@ -106,50 +19,79 @@
     position: relative;
     margin: auto;
 }
-.app-loading .lds-pacman > div:nth-child(2) div {
-    position: absolute;
-    top: 40px;
-    left: 40px;
-    width: 120px;
-    height: 60px;
-    border-radius: 120px 120px 0 0;
-    background: #bbcedd;
-    -webkit-animation: lds-pacman-1 1s linear infinite;
-    animation: lds-pacman-1 1s linear infinite;
-    -webkit-transform-origin: 60px 60px;
-    transform-origin: 60px 60px;
+
+.app-loading .lds-pacman .spinner {
+    -webkit-animation: rotation 1.35s linear infinite;
+    animation: rotation 1.35s linear infinite;
+    stroke: #e51c23;
 }
-.app-loading .lds-pacman > div:nth-child(2) div:nth-child(2) {
-    -webkit-animation: lds-pacman-2 1s linear infinite;
-    animation: lds-pacman-2 1s linear infinite;
+
+.app-loading .lds-pacman .circle {
+    stroke-dasharray: 180;
+    stroke-dashoffset: 0;
+    -webkit-transform-origin: center;
+    -ms-transform-origin: center;
+    transform-origin: center;
+    -webkit-animation: turn 1.35s ease-in-out infinite;
+    animation: turn 1.35s ease-in-out infinite;
 }
-.app-loading .lds-pacman > div:nth-child(1) div {
-    position: absolute;
-    top: 92px;
-    left: -8px;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    background-image: url('../images/hipster192.png');
-    background-size: contain;
-    -webkit-animation: lds-pacman-3 1s linear infinite;
-    animation: lds-pacman-3 1.5s linear infinite;
+
+@-webkit-keyframes rotation {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(270deg);
+        transform: rotate(270deg);
+    }
 }
-.app-loading .lds-pacman > div:nth-child(1) div:nth-child(1) {
-    -webkit-animation-delay: -0.67s;
-    animation-delay: -1s;
+
+@keyframes rotation {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(270deg);
+        transform: rotate(270deg);
+    }
 }
-.app-loading .lds-pacman > div:nth-child(1) div:nth-child(2) {
-    -webkit-animation-delay: -0.33s;
-    animation-delay: -0.5s;
+
+@-webkit-keyframes turn {
+    0% {
+        stroke-dashoffset: 180;
+    }
+
+    50% {
+        stroke-dashoffset: 45;
+        -webkit-transform: rotate(135deg);
+        transform: rotate(135deg);
+    }
+
+    100% {
+        stroke-dashoffset: 180;
+        -webkit-transform: rotate(450deg);
+        transform: rotate(450deg);
+    }
 }
-.app-loading .lds-pacman > div:nth-child(1) div:nth-child(3) {
-    -webkit-animation-delay: 0s;
-    animation-delay: 0s;
-}
-.app-loading .lds-pacman {
-    width: 200px !important;
-    height: 200px !important;
-    -webkit-transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
-    transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
+
+@keyframes turn {
+    0% {
+        stroke-dashoffset: 180;
+    }
+
+    50% {
+        stroke-dashoffset: 45;
+        -webkit-transform: rotate(135deg);
+        transform: rotate(135deg);
+    }
+
+    100% {
+        stroke-dashoffset: 180;
+        -webkit-transform: rotate(450deg);
+        transform: rotate(450deg);
+    }
 }
