basic layout added

--- a/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -86,6 +86,12 @@
                         </a>
                     </li>
                     <li>
+                        <a routerLink="claim-search" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <mat-icon>pageview</mat-icon>
+                            <span>Claim Search</span>
+                        </a>
+                    </li>
+                    <li>
                         <a routerLink="claimant" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>record_voice_over</mat-icon>
                             <span jhiTranslate="global.menu.entities.factcheckClaimant">Claimant</span>
