--- a/src/main/webapp/app/entities/factcheck/claim-search/claim-search.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim-search/claim-search.component.html
@@ -2,7 +2,7 @@
     <div class="row mt-5">
         <div class="col-md-5">
             <h2 id="page-heading font-sz-20">
-                <span jhiTranslate="gatewayApp.factcheckClaim.home.title">Claims</span>
+                <span>Search Claims</span>
             </h2>
         </div>
         <div class="col-md-7">
@@ -14,88 +14,35 @@
                 <button mat-icon-button mat-raised-button  class="mr-2" (click)="search(currentSearch)">
                     <mat-icon>search</mat-icon>
                 </button>
-                <button mat-icon-button mat-raised-button color="warn" class="mr-3"
-                        (click)="clear()" *ngIf="currentSearch">
-                    <mat-icon class="white">delete_outline</mat-icon>
-                </button>
-                <div>
-                    <button mat-button mat-raised-button color="primary"
-                            id="jh-create-entity" class="jh-create-entity create-claim" (click)="openClaimEditDialog(null)">
-                        <fa-icon [icon]="'plus'"></fa-icon>
-                        <span class="hidden-sm-down"  jhiTranslate="gatewayApp.factcheckClaim.home.createLabel">Create new Claim</span>
-                    </button>
-                </div>
             </form>
         </div>
     </div>
     <jhi-alert></jhi-alert>
-    <div class="row">
-        <div class="table-responsive col-md-12" *ngIf="claims" jhiSort [(predicate)]="predicate" [(ascending)]="reverse"
-             [callback]="transition.bind(this)">
-            <table mat-table [dataSource]="claims" class="mat-elevation-z8 shadow-table full-width alternate-color box-shadow-2">
-                <ng-container matColumnDef="claim">
-                    <th jhiSortBy="claim" mat-header-cell *matHeaderCellDef><span jhiTranslate="gatewayApp.factcheckClaim.claim">Claim</span>
-                        <fa-icon [icon]="'sort'"></fa-icon>
-                    </th>
-                    <td mat-cell *matCellDef="let element"> {{element.claim}}</td>
-                </ng-container>
-                <ng-container matColumnDef="createdDate">
-                    <th jhiSortBy="createdDate" mat-header-cell *matHeaderCellDef class="mw-md-200"><span jhiTranslate="gatewayApp.factcheckClaim.createdDate">Created Date</span>
-                        <fa-icon [icon]="'sort'"></fa-icon>
-                    </th>
-                    <td mat-cell *matCellDef="let element"> {{element.createdDate | date:'medium'}}</td>
-                </ng-container>
-                <ng-container matColumnDef="ratingName">
-                    <th jhiSortBy="ratingName" mat-header-cell *matHeaderCellDef><span jhiTranslate="gatewayApp.factcheckClaim.rating">Created Date</span>
-                        <fa-icon [icon]="'sort'"></fa-icon>
-                    </th>
-                    <td mat-cell *matCellDef="let element">
-                        <span *ngIf="element.ratingId">
-                            <a [routerLink]="['../rating', element.ratingId , 'view' ]">{{element.ratingName}}</a>
-                        </span>
-                    </td>
-                </ng-container>
-                <ng-container matColumnDef="claimantName">
-                    <th class="mw-md-200" jhiSortBy="claimantName" mat-header-cell *matHeaderCellDef><span jhiTranslate="gatewayApp.factcheckClaim.claimant">Created Date</span>
-                        <fa-icon [icon]="'sort'"></fa-icon>
-                    </th>
-                    <td mat-cell *matCellDef="let element">
-                        <span *ngIf="element.claimantId">
-                            <a [routerLink]="['../clamant', element.claimantId , 'view' ]">{{element.claimantName}}</a>
-                        </span>
-                    </td>
-                </ng-container>
-                <ng-container matColumnDef="actions">
-                    <th mat-header-cell *matHeaderCellDef class="action-column"> Actions</th>
-                    <td mat-cell *matCellDef="let element">
-                        <div class="action-button-container">
-                            <div [routerLink]="['/claim', element.id, 'view' ]">
-                                <fa-icon [icon]="'eye'"></fa-icon>
-                            </div>
-                            <div (click)="openClaimEditDialog(element)">
-                                <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                            </div>
-                            <div>
-                                <span (click)="openDialogPopUp(element)">
-                                    <fa-icon [icon]="'times'">
-                                    </fa-icon>
-                                </span>
-                            </div>
-                        </div>
-                    </td>
-                </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-        </div>
-    </div>
-    <div *ngIf="claims && claims.length">
-        <div class="row justify-content-center">
-            <jhi-item-count [page]="page" [total]="queryCount" [maxSize]="5" [itemsPerPage]="itemsPerPage"></jhi-item-count>
-        </div>
-        <div class="row justify-content-center">
-            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5" [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
+    <div>
+        <div *ngFor="let claimDetails of claimsSearchResult">
+            <div>Claimant :{{claimDetails.claimant}}</div>
+            <div>Claim date: {{claimDetails.claimDate | date:'medium'}}</div>
+            <div>Text: {{claimDetails.text}}</div>
+            <div *ngFor="let claimReview of claimDetails.claimReview">
+                <div>
+                    <span>Publisher name: {{claimReview.publisher.name}}</span>
+                    <span>Publisher name: {{claimReview.publisher.site}}</span>
+                </div>
+                <div>
+                    Title: {{claimReview.title}}
+                </div>
+                <div>
+                    Link: <a target="_blank" [href]="claimReview.url">{{claimReview.url}}</a>
+                </div>
+                <div>
+                    Review Date: {{claimReview.reviewDate | date:'medium'}}
+                </div>
+                <div>
+                    Claim Status: {{claimReview.textualRating}}
+                </div>
+            </div>
+            <hr>
         </div>
     </div>
 </div>
