fixed build issue and fixes issue #173

--- a/src/main/webapp/app/entities/factcheck/claim-search/claim-search.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim-search/claim-search.component.html
@@ -11,7 +11,7 @@
                     <input matInput
                            type="text" [(ngModel)]="currentSearch" id="currentSearch" name="currentSearch" placeholder="{{ 'gatewayApp.factcheckClaim.home.search' | translate }}">
                 </mat-form-field>
-                <button mat-icon-button mat-raised-button  class="mr-2" (click)="search(currentSearch)">
+                <button mat-icon-button mat-raised-button  class="mr-2" (click)="search()">
                     <mat-icon>search</mat-icon>
                 </button>
             </form>
