--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -12,6 +12,29 @@
     <div class="navbar-collapse collapse" id="navbarResponsive" [ngbCollapse]="isNavbarCollapsed"
          [ngSwitch]="isAuthenticated()">
         <ul class="navbar-nav ml-auto">
+            <li ngbDropdown class="nav-item dropdown pointer" *ngIf="organisationOptions && organisationOptions.length > 1">
+                <a class="nav-link dropdown-toggle" ngbDropdownToggle
+                   id="orgainisationnavBarDropdown">
+                    <span>
+                        <mat-icon>nature_people</mat-icon>
+                        <span>Organisation</span>
+                    </span>
+                </a>
+                <ul class="dropdown-menu" ngbDropdownMenu>
+                    <li *ngFor="let organisation of organisationOptions">
+                        <a class="dropdown-item" [jhiActiveMenu]="organisation"
+                           (click)="changeOrganisation(organisation);collapseNavbar();">
+                            <span *ngIf="organisation.id==currentUser.organizationCurrentId">
+                                <mat-icon>done</mat-icon>
+                            </span>
+
+                            {{organisation.name}}
+                        </a>
+                    </li>
+                </ul>
+            </li>
+
+
             <li ngbDropdown class="nav-item dropdown pointer" *ngIf="languages && languages.length > 1">
                 <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);"
                    id="languagesnavBarDropdown">
