--- a/src/main/webapp/app/entities/factcheck/claim/claim-detail.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/claim-detail.component.html
@@ -49,7 +49,7 @@
                         <tr>
                             <td><span jhiTranslate="gatewayApp.factcheckClaim.review">Review</span></td>
                             <td>
-                                <span>{{claim.review}}</span>
+                                <span [innerHtml]="claim.review"></span>
                             </td>
                         </tr>
                         <tr>
