--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -16,8 +16,7 @@
                 <a class="nav-link dropdown-toggle" ngbDropdownToggle
                    id="orgainisationnavBarDropdown">
                     <span>
-                        <mat-icon>nature_people</mat-icon>
-                        <span>Organisation</span>
+                        <span>{{currentUser?.organizationCurrentName}}</span>
                     </span>
                 </a>
                 <ul class="dropdown-menu" ngbDropdownMenu>
