--- a/src/main/webapp/app/entities/factcheck/claim-search/claim-search.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim-search/claim-search.component.html
@@ -1,12 +1,15 @@
-<div class="table-view-page p-2">
+<div class="table-view-page claim-search p-2">
     <div class="row mt-5">
         <div class="col-md-5">
             <h2 id="page-heading font-sz-20">
                 <span>Search Claims</span>
             </h2>
         </div>
-        <div class="col-md-7">
-            <form name="searchForm" class="d-flex align-content-center justify-content-end">
+    </div>
+    <jhi-alert></jhi-alert>
+    <div class="row mt-5">
+        <div class="col-md-12">
+            <form name="searchForm" class="d-flex align-content-center justify-content-center">
                 <mat-form-field class="col-5">
                     <input matInput
                            type="text" [(ngModel)]="currentSearch" id="currentSearch" name="currentSearch" placeholder="{{ 'gatewayApp.factcheckClaim.home.search' | translate }}">
@@ -17,32 +20,22 @@
             </form>
         </div>
     </div>
-    <jhi-alert></jhi-alert>
-
-    <div>
-        <div *ngFor="let claimDetails of claimsSearchResult">
-            <div>Claimant :{{claimDetails.claimant}}</div>
-            <div>Claim date: {{claimDetails.claimDate | date:'medium'}}</div>
-            <div>Text: {{claimDetails.text}}</div>
-            <div *ngFor="let claimReview of claimDetails.claimReview">
-                <div>
-                    <span>Publisher name: {{claimReview.publisher.name}}</span>
-                    <span>Publisher name: {{claimReview.publisher.site}}</span>
+    <div class="row claim-wrap">
+        <div class="claim col-md-8" *ngFor="let claimDetails of claimsSearchResult">
+            <div class="d-flex"><p class="claimed-by">Claim by {{claimDetails.claimant}}</p></div>
+            <div><p class="claim-text">{{claimDetails.text}}</p></div>
+            <div class="claim-date"><p>{{claimDetails.claimDate | date:'medium'}}</p></div>
+            <div class="review" *ngFor="let claimReview of claimDetails.claimReview">
+                <div class="rating">
+                    <p><span>{{claimReview.publisher.name}}</span> <span> rating :</span> <span>{{claimReview.textualRating}}</span></p>
                 </div>
-                <div>
-                    Title: {{claimReview.title}}
+                <div class="title">
+                    <a target="_blank" [href]="claimReview.url">{{claimReview.title}}</a>
                 </div>
-                <div>
-                    Link: <a target="_blank" [href]="claimReview.url">{{claimReview.url}}</a>
-                </div>
-                <div>
-                    Review Date: {{claimReview.reviewDate | date:'medium'}}
-                </div>
-                <div>
-                    Claim Status: {{claimReview.textualRating}}
+                <div class="review-date">
+                    <p>Review Date: {{claimReview.reviewDate | date:'medium'}}</p>
                 </div>
             </div>
-            <hr>
         </div>
     </div>
 </div>
