--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -1,4 +1,5 @@
 @import 'bootstrap-variables';
+@import 'variables';
 
 /* ==============================================================
 Bootstrap tweaks
@@ -697,6 +698,57 @@ $xs-sm-font-size: 12px;
             padding: 10px 20px;
             h2 {
                 font-size: 20px;
+            }
+        }
+    }
+}
+
+.claim-search {
+    .claim-wrap {
+        justify-content: center;
+        .claim {
+            background-color: white;
+            padding: 15px 20px;
+            margin-bottom: 15px;
+            border-radius: 5px;
+            box-shadow: $shadow-sm;
+            .claimed-by {
+                background: #8e8e8e;
+                padding: 4px 10px;
+                color: white;
+                margin-left: -20px;
+                border-radius: 0 5px 5px 0;
+            }
+            .claim-text {
+                font-weight: 500;
+                font-size: 18px;
+                margin-bottom: 0px;
+            }
+            .claim-date {
+                > p {
+                    color: $grey-font-color;
+                    font-size: 12px;
+                }
+            }
+            .review {
+                .rating {
+                    p {
+                        margin-bottom: 0px;
+                    }
+                }
+                .title {
+                    a {
+                        color: $hyper-link-color;
+                    }
+                }
+                .review-date {
+                    font-style: italic;
+                    font-size: 12px;
+                    color: $grey-font-color;
+                    > p {
+                        margin-bottom: 5px;
+                    }
+                }
             }
         }
     }
