--- a/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
@@ -41,9 +41,7 @@
                         <div class="mb-3"><img src={{claimant.imageURL}} height="100"></div>
                         <button mat-raised-button color="primary"
                             id="field_imageURL" class="jh-create-entity create-media"
-                                [routerLink]="['/', { outlets: { popup: 'featured-media/upload'} }]"
-                                [queryParams]="{ media_type: 'feature'}"
-                                replaceUrl="true" type="button">
+                                (click)="choseMediaforFeature()" type="button">
                             <fa-icon [icon]="'plus'"></fa-icon>
                             <span class="hidden-sm-down"  jhiTranslate="gatewayApp.coreMedia.home.uploadMediaLabel">
                             Upload Media
