--- a/src/main/webapp/content/scss/variables.scss
+++ b/src/main/webapp/content/scss/variables.scss
@@ -1,3 +1,12 @@
+/* Theme Color */
+$primary: #607d8b;
+$primary-light: #8eacbb;
+$primary-dark: #34515e;
+
+$secondary: #ff8a65;
+$secondary-light: #ffbb93;
+$secondary-dark: #c75b39;
+
 /* Font Size */
 $xs-sm-font: 10px;
 
