--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -344,15 +344,50 @@ ui bootstrap tweaks
 /* Angular material css starts */
 
 @import '~@angular/material/theming';
+
+$dega-mat-secondary: (
+    50: #fff1ed,
+    100: #ffdcd1,
+    200: #ffc5b2,
+    300: #ffad93,
+    400: #ff9c7c,
+    500: #ff8a65,
+    600: #ff825d,
+    700: #ff7753,
+    800: #ff6d49,
+    900: #ff5a37,
+    A100: #ffffff,
+    A200: #ffffff,
+    A400: #ffe6e1,
+    A700: #ffd0c8,
+    contrast: (
+        50: #000000,
+        100: #000000,
+        200: #000000,
+        300: #000000,
+        400: #000000,
+        500: #000000,
+        600: #000000,
+        700: #000000,
+        800: #000000,
+        900: #000000,
+        A100: #000000,
+        A200: #000000,
+        A400: #000000,
+        A700: #000000
+    )
+);
+
 @include mat-core();
 
 // Use the desired palette
-$palette: mat-palette($mat-indigo);
+$palette: mat-palette($dega-mat-secondary);
 // Create the theme
 $theme: mat-light-theme($palette, $palette);
 
 // Include component specific mixin
 @include mat-dialog-theme($theme);
+@include mat-button-theme($theme);
 @include mat-checkbox-theme($theme);
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 /* Angular material css ends */
@@ -472,7 +507,7 @@ $xs-sm-font-size: 12px;
                     overflow: hidden;
                     font-size: 22px;
                     font-weight: 500;
-                    color: #{$link-font-color};
+                    color: $secondary;
                     cursor: pointer;
                     &:hover {
                         text-decoration: underline;
@@ -556,7 +591,7 @@ $xs-sm-font-size: 12px;
         width: calc(100% + 17px);
         display: flex;
         flex-flow: row-reverse;
-        border: solid 1px #d4d4d4;
+        border: solid 1px $grey-font-color;
         border-width: 1px 0;
     }
     .editor-wrap {
@@ -573,11 +608,11 @@ $xs-sm-font-size: 12px;
             font-size: 24px;
         }
         .editor-title {
-            padding: 20px 0 0 20px;
-            font-size: 20px;
+            padding: 20px 0 0 0px;
+            font-size: 16px;
+            color: rgba(0, 0, 0, 0.54);
         }
         .quill-editor-wrapper {
-            box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
             margin-top: 20px;
             jhi-quill-editor {
                 quill-editor {
@@ -618,7 +653,7 @@ $xs-sm-font-size: 12px;
 /* Table view page layout*/
 .table-view-page {
     h2 {
-        border: solid 5px #dc3545;
+        border: solid 5px $secondary;
         border-width: 0 0 0 5px;
         padding-left: 12px;
     }
@@ -640,7 +675,7 @@ $xs-sm-font-size: 12px;
         padding: 20px 10px 50px 10px;
     }
     h2 {
-        border: solid 5px #dc3545;
+        border: solid 5px $secondary;
         border-width: 0 0 0 5px;
         padding-left: 12px;
     }
@@ -665,7 +700,7 @@ $xs-sm-font-size: 12px;
         background: white;
         h2 {
             margin-top: 2rem;
-            border: solid 5px #dc3545;
+            border: solid 5px $secondary;
             border-width: 0 0 0 5px;
             padding-left: 12px;
         }
@@ -702,7 +737,7 @@ $xs-sm-font-size: 12px;
             top: 0px;
             width: 100%;
             height: 50px;
-            background-color: #3a4248;
+            background-color: $primary-dark;
             color: white;
             z-index: 1;
             padding: 10px 20px;
@@ -723,7 +758,7 @@ $xs-sm-font-size: 12px;
             border-radius: 5px;
             box-shadow: $shadow-sm;
             .claimed-by {
-                background: #8e8e8e;
+                background: $secondary;
                 padding: 4px 10px;
                 color: white;
                 margin-left: -20px;
