--- a/src/main/webapp/app/entities/core/post/post.component.html
+++ b/src/main/webapp/app/entities/core/post/post.component.html
@@ -1,7 +1,7 @@
 <div class="p-2">
     <div class="row mt-5">
         <div class="col-md-5">
-            <h2 id="page-heading">
+            <h2 class="left-border" id="page-heading">
                 <span jhiTranslate="gatewayApp.corePost.home.title">Posts</span>
             </h2>
         </div>
