--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -54,6 +54,9 @@ Generic styles
 .white-bc {
     background-color: white;
 }
+.grey-bc {
+    background-color: #ececec;
+}
 .white {
     color: white;
 }
@@ -139,7 +142,9 @@ margin-20 {
 .padding-40-0 {
     padding: 40px 0;
 }
-
+.font-sz-16 {
+    font-size: 16px;
+}
 .font-sz-20 {
     font-size: 20px;
 }
@@ -159,6 +164,11 @@ margin-20 {
     margin: 0 auto;
     margin-top: 20px;
     margin-bottom: 20px;
+}
+.left-border {
+    border: solid 5px $secondary;
+    border-width: 0 0 0 5px;
+    padding-left: 12px;
 }
 
 .action-button-container {
@@ -361,20 +371,20 @@ $dega-mat-secondary: (
     A400: #ffe6e1,
     A700: #ffd0c8,
     contrast: (
-        50: #000000,
-        100: #000000,
-        200: #000000,
-        300: #000000,
-        400: #000000,
-        500: #000000,
-        600: #000000,
-        700: #000000,
-        800: #000000,
-        900: #000000,
-        A100: #000000,
-        A200: #000000,
-        A400: #000000,
-        A700: #000000
+        50: #ffffff,
+        100: #ffffff,
+        200: #ffffff,
+        300: #ffffff,
+        400: #ffffff,
+        500: #ffffff,
+        600: #ffffff,
+        700: #ffffff,
+        800: #ffffff,
+        900: #ffffff,
+        A100: #ffffff,
+        A200: #ffffff,
+        A400: #ffffff,
+        A700: #ffffff
     )
 );
 
@@ -386,9 +396,12 @@ $palette: mat-palette($dega-mat-secondary);
 $theme: mat-light-theme($palette, $palette);
 
 // Include component specific mixin
-@include mat-dialog-theme($theme);
-@include mat-button-theme($theme);
-@include mat-checkbox-theme($theme);
+//@include mat-dialog-theme($theme);
+//@include mat-button-theme($theme);
+//@include mat-checkbox-theme($theme);
+
+@include angular-material-theme($theme);
+
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 /* Angular material css ends */
 
@@ -591,7 +604,7 @@ $xs-sm-font-size: 12px;
         width: calc(100% + 17px);
         display: flex;
         flex-flow: row-reverse;
-        border: solid 1px $grey-font-color;
+        border: solid 1px #dcdcdc;
         border-width: 1px 0;
     }
     .editor-wrap {
@@ -634,6 +647,7 @@ $xs-sm-font-size: 12px;
         overflow-y: scroll;
         padding: 10px 7px;
         mat-expansion-panel {
+            background-color: #ececec;
             mat-form-field {
                 width: 140px;
             }
