--- a/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -19,6 +19,36 @@
                     </span>
 				</a>
 				<ul class="nav-dropdown-items">
+                    <li>
+                        <a routerLink="claim-search" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <mat-icon>pageview</mat-icon>
+                            <span>Claim Search</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="claim" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <mat-icon>record_voice_over</mat-icon>
+                            <span jhiTranslate="global.menu.entities.factcheckClaim">Claim</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="claimant" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <mat-icon>perm_identity</mat-icon>
+                            <span jhiTranslate="global.menu.entities.factcheckClaimant">Claimant</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="factcheck" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" >
+                            <mat-icon>beenhere</mat-icon>
+                            <span jhiTranslate="global.menu.entities.factcheckFactcheck">Factcheck</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="rating" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <mat-icon>thumbs_up_down</mat-icon>
+                            <span jhiTranslate="global.menu.entities.factcheckRating">Rating</span>
+                        </a>
+                    </li>
 					<li>
 						<a routerLink="post" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
 							<mat-icon>assignment</mat-icon>
@@ -31,30 +61,18 @@
 							<span jhiTranslate="global.menu.entities.coreCategory">Category</span>
 						</a>
 					</li>
-					<li>
-						<a routerLink="format" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-							<mat-icon>format_shapes</mat-icon>
-							<span jhiTranslate="global.menu.entities.coreFormat">Format</span>
-						</a>
-					</li>
-					<li>
-						<a routerLink="organization" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-							<mat-icon>nature_people</mat-icon>
-							<span jhiTranslate="global.menu.entities.coreOrganization">Organization</span>
-						</a>
-					</li>
-					<li>
-						<a routerLink="status" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-							<mat-icon>linear_scale</mat-icon>
-							<span jhiTranslate="global.menu.entities.coreStatus">Status</span>
-						</a>
-					</li>
                     <li>
                         <a routerLink="tag" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>style</mat-icon>
                             <span jhiTranslate="global.menu.entities.coreTag">Tag</span>
                         </a>
                     </li>
+					<li>
+						<a routerLink="format" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+							<mat-icon>format_shapes</mat-icon>
+							<span jhiTranslate="global.menu.entities.coreFormat">Format</span>
+						</a>
+					</li>
                     <li>
                         <a routerLink="media" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>perm_media</mat-icon>
@@ -62,45 +80,27 @@
                         </a>
                     </li>
                     <li>
+                        <a routerLink="status" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                            <mat-icon>linear_scale</mat-icon>
+                            <span jhiTranslate="global.menu.entities.coreStatus">Status</span>
+                        </a>
+                    </li>
+					<li>
+						<a routerLink="organization" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+							<mat-icon>nature_people</mat-icon>
+							<span jhiTranslate="global.menu.entities.coreOrganization">Organization</span>
+						</a>
+					</li>
+                    <li>
                         <a routerLink="dega-user" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>people</mat-icon>
-                            <span jhiTranslate="global.menu.entities.coreDegaUser">Dega User</span>
+                            <span jhiTranslate="global.menu.entities.coreDegaUser">User</span>
                         </a>
                     </li>
                     <li>
                         <a routerLinkActive="active" routerLink="role" [routerLinkActiveOptions]="{ exact: true }">
                             <mat-icon>verified_user</mat-icon>
                             <span jhiTranslate="global.menu.entities.coreRole">Role</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a routerLink="rating" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                            <mat-icon>star_rate</mat-icon>
-                            <span jhiTranslate="global.menu.entities.factcheckRating">Rating</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a routerLink="claim" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                            <mat-icon>pageview</mat-icon>
-                            <span jhiTranslate="global.menu.entities.factcheckClaim">Claim</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a routerLink="claim-search" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                            <mat-icon>pageview</mat-icon>
-                            <span>Claim Search</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a routerLink="claimant" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                            <mat-icon>record_voice_over</mat-icon>
-                            <span jhiTranslate="global.menu.entities.factcheckClaimant">Claimant</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a routerLink="factcheck" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" >
-                            <mat-icon>beenhere</mat-icon>
-                            <span jhiTranslate="global.menu.entities.factcheckFactcheck">Factcheck</span>
                         </a>
                     </li>
                     <li>
