--- a/src/main/webapp/app/shared/quill-editor/quill-editor-add-tweet.component.html
+++ b/src/main/webapp/app/shared/quill-editor/quill-editor-add-tweet.component.html
@@ -1,1 +1,24 @@
-<div>Test</div>
+<div class="header-dialogue">
+    <div class="dialogue-header shadow-sm">
+        <h2 class="jhi-claim-heading">Add tweet<mat-icon class="float-right" data-dismiss="modal" (click)="clear()">close</mat-icon></h2>
+    </div>
+    <div class="dialogue-body p-4">
+        <div class="row">
+            <div class="col-md-12">
+                <form name="searchForm" class="d-flex align-items-center justify-content-center">
+                    <mat-form-field class="col-5">
+                        <input matInput
+                               type="text" [(ngModel)]="tweet_link" id="currentSearch" name="currentSearch" placeholder="Tweet URL">
+                    </mat-form-field>
+                    <div>
+                        <button mat-raised-button color="primary" type="button" (click)="preview()">Preview<mat-icon>show</mat-icon></button>
+                        <button mat-raised-button color="primary" (click)="selectTweet()">Add<mat-icon>add</mat-icon></button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div *ngIf="tweet_link">
+        <blockquote class="twitter-tweet"><a [href]="tweet_link"></a></blockquote>
+    </div>
+</div>
