--- a/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/claimant/claimant-update.component.html
@@ -31,10 +31,11 @@
                         </mat-form-field>
                     </div>
                     <div class="form-group">
-                        <mat-form-field class="w-100">
-                            <textarea matInput placeholder="{{ 'gatewayApp.factcheckClaimant.description' | translate }}"
+                        <mat-form-field class="w-100" hintLabel="Max 400 characters">
+                            <textarea matInput #input placeholder="{{ 'gatewayApp.factcheckClaimant.description' | translate }}"
                                       rows="5" type="text" name="description" id="field_description"
-                                      [(ngModel)]="claimant.description" ></textarea>
+                                      [(ngModel)]="claimant.description" maxlength="400"></textarea>
+                            <mat-hint align="end">{{input.value?.length || 0}}/400</mat-hint>
                         </mat-form-field>
                     </div>
                     <div class="form-group">
