--- a/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
@@ -56,10 +56,11 @@
                     </div>
                     <div class="form-group">
                         <span class="text-danger" [hidden]="rating.description">*</span>
-                        <mat-form-field class="w-100">
-                            <textarea matInput placeholder="{{ 'gatewayApp.factcheckRating.description' | translate }}"
+                        <mat-form-field class="w-100" hintLabel="Max 400 characters">
+                            <textarea matInput #input placeholder="{{ 'gatewayApp.factcheckRating.description' | translate }}"
                                 rows="5" type="text" name="description" id="field_description"
-                                      [(ngModel)]="rating.description" required ></textarea>
+                                      [(ngModel)]="rating.description" maxlength="400" required ></textarea>
+                            <mat-hint align="end">{{input.value?.length || 0}}/400</mat-hint>
                         </mat-form-field>
                         <div [hidden]="!(editForm.controls.description?.dirty && editForm.controls.description?.invalid)">
                             <small class="form-text text-danger"
